# OpenGL_Practice

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  VAO.cpp  VAO.h  shaderClass.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
others/: square_m1.cpp  square_m2.cpp  square_m2_final_EBO.cpp  triangle.cpp  triangle3.cpp  windowSyth.cpp
shaders/: default.frag  default.vert
src/: main.cpp
